--- a/MusicBoxEditor/src/app/app.component.html
+++ b/MusicBoxEditor/src/app/app.component.html
@@ -14,6 +14,7 @@
       </label>
       <label>
         <h4>Actions:</h4> 
+        <!--button (click)="onClickSaveProject()">Save Project</button-->
         <Button (click)="onClickImportMidi()">Import Midi</Button>
         <Button (click)="onClickDownload()">Download as SVG</Button>
       </label>
