Code improvements on loading and downloading files.

--- a/experimental/musicboxeditor/src/app/app.component.html
+++ b/experimental/musicboxeditor/src/app/app.component.html
@@ -120,6 +120,8 @@
     </div>
 </div>
 
+<input id="file-input" type="file" style="display: hidden;">
+<a id="file-output" style="display: hidden;"></a>
 <dialog-renderer></dialog-renderer>>
 <hint-renderer></hint-renderer>
 <context-menu-renderer></context-menu-renderer>
