--- a/experimental/whitebird/custom.css
+++ b/experimental/whitebird/custom.css
@@ -15,6 +15,11 @@ body {
     margin-top:20px;
 }
 
+#preview-wrapper {
+    overflow-y: hidden;
+    overflow-x: scroll;
+}
+
 #preview {
     width:100%;
     height:98%;
