--- a/experimental/musicboxeditor/src/app/app.component.html
+++ b/experimental/musicboxeditor/src/app/app.component.html
@@ -94,7 +94,7 @@
         <text class="note" *ngFor="let ns of noteScale" (click)="onClickScale($event, ns)" style="font-size: 1mm; vertical-align: middle;" text-anchor="start" x="2" [attr.y]="getTextY(ns)" [textContent]="midiToNote(ns)"></text>
       </svg>  
       <div class="track">
-        <svg id="musicbox-svg" *ngIf="showTrack()" [attr.width]="getViewBoxWidth()" [attr.height]="getViewBoxHeight()" [attr.viewBox]="getTrackViewBox()" (click)="onClickSvg($event)" (mouseenter)="onMouseEnterSvg($event)" (mouseleave)="onMouseLeaveSvg($event)" (mousemove)="onMouseOverSvg($event)" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+        <svg id="musicbox-svg" *ngIf="showTrack()" [attr.width]="getViewBoxWidth()" [attr.height]="getViewBoxHeight()" [attr.viewBox]="getTrackViewBox()" (mouseup)="onMouseUpSvg($event)" (mouseenter)="onMouseEnterSvg($event)" (mouseleave)="onMouseLeaveSvg($event)" (mousemove)="onMouseOverSvg($event)" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
           <!--Pattern-->
           <defs id="defs">
             <pattern id="map" width="8" height="3" patternUnits="userSpaceOnUse">
@@ -124,10 +124,10 @@
           <!--Notes-->
           <g id="notes">
             <template [ngIf]="isCircleNoteType()">
-              <ellipse *ngFor="let n of notes" [hint]="getHint(n)" (contextmenu)="onClickContextMenu($event, n)" [attr.fill]="getNoteFillColor(n)" stroke="#000" stroke-width="0.5" [attr.cx]="getNoteX(n)" [attr.cy]="getNoteY(n)" [attr.rx]="getNoteWidth(n)" [attr.ry]="getNoteHeight()" />
+              <ellipse *ngFor="let n of notes" (mousedown)="onMouseDownNote(n)" [hint]="getHint(n)" (contextmenu)="onClickContextMenu($event, n)" [attr.fill]="getNoteFillColor(n)" stroke="#000" stroke-width="0.5" [attr.cx]="getNoteX(n)" [attr.cy]="getNoteY(n)" [attr.rx]="getNoteWidth(n)" [attr.ry]="getNoteHeight()" />
             </template>
             <template [ngIf]="!isCircleNoteType()">
-              <rect *ngFor="let n of notes" [hint]="getHint(n)" (contextmenu)="onClickContextMenu($event, n)" [attr.fill]="getNoteFillColor(n)" stroke="#000" stroke-width="0.5" [attr.x]="getNoteX(n)" [attr.y]="getNoteY(n)" [attr.width]="getNoteWidth(n)" [attr.height]="getNoteHeight()" />
+              <rect *ngFor="let n of notes" (mousedown)="onMouseDownNote(n)" [hint]="getHint(n)" (contextmenu)="onClickContextMenu($event, n)" [attr.fill]="getNoteFillColor(n)" stroke="#000" stroke-width="0.5" [attr.x]="getNoteX(n)" [attr.y]="getNoteY(n)" [attr.width]="getNoteWidth(n)" [attr.height]="getNoteHeight()" />
             </template>
           </g>
 
